# adaptive-trpo

./: .gitignore  README.md  hpo.py  main.py  pyproject.toml
atrpo/algorithms/: adaptive_trpo.py  trpo_with_ent.py
atrpo/builders/: __init__.py  algorithm.py  env.py  policy.py
atrpo/utils/: env.py  exp_manager.py  logger.py  mlflow_hydra.py  utils.py
conf/: config.yaml  config_ax.yaml
conf/algorithm/: adaptive_trpo.yaml  npg.yaml  trpo.yaml
conf/algorithm/kl_update_ratio_func/: exp_by_snr.yaml
conf/algorithm/kl_update_ratio_func/kl_update_strength_func/: constant.yaml
conf/algorithm/kl_update_ratio_func/projection/: clamp.yaml
conf/algorithm/schedule/: constant.yaml
conf/env/: ant.yaml  halfcheetah.yaml  hopper.yaml  inverted_double_pendulum.yaml  inverted_pendulum.yaml  pendulum.yaml  pusher.yaml  reacher.yaml  swimmer.yaml  walker2d.yaml
conf/policy/: actor_critic.yaml
conf/policy/feature_extractor/: flatten_extractor.yaml
conf/policy/optimizer/: adam.yaml
conf/search_space/ax/: adaptive_trpo.yaml  trpo.yaml
notebook/: convert_to_csv.ipynb  fanova.ipynb  result_plotter.ipynb
optimization_results/: atrpo_hopper.yaml  atrpo_walker2d.yaml  trpo_hopper.yaml  trpo_walker2d.yaml
scripts/: random_policy.py
